feat(repairs): added show button to display erroring id

--- a/Assets/com.fluid.unique-id/Editor/UniqueIdRepairs/Components/Molecules/UniqueIdError/UniqueIdError.uss
+++ b/Assets/com.fluid.unique-id/Editor/UniqueIdRepairs/Components/Molecules/UniqueIdError/UniqueIdError.uss
@@ -9,8 +9,8 @@
     margin: 3px;
 }
 
-.m-unique-id-error.-fixed
-.m-unique-id-error__fix {
+.m-unique-id-error.-fixed .m-unique-id-error__fix,
+.m-unique-id-error.-fixed .m-unique-id-error__show {
     display: none;
 }
 
