test(reports): partial test suite in prep on refactor

--- a/Assets/com.fluid.unique-id/Editor/UniqueIdRepairs/Components/Pages/Window/PageWindow.uss
+++ b/Assets/com.fluid.unique-id/Editor/UniqueIdRepairs/Components/Pages/Window/PageWindow.uss
@@ -13,3 +13,11 @@
 .p-window__message {
     margin-bottom: 10px;
 }
+
+.p-window__no-errors {
+    display: none;
+}
+
+.p-window__no-errors.-show {
+    display: initial;
+}
